Feat: Booking and Payment

--- a/api/.env
+++ b/api/.env
@@ -1,9 +1,9 @@
 MONGODB_URI=mongodb://127.0.0.1:27017/movie_booking
 JWT_SECRET=Ascmkkqdnmsdfrtgsyuhidj21ue120938219321ndsad
 JWT_EXPIRE=7d
-CLOUDINARY_CLOUD_NAME=dvsqjznt2
-CLOUDINARY_API_KEY=972263771665811
-CLOUDINARY_API_SECRET=KPEcoKhuh5p_LeH6CC-_z6m7gu4
+CLOUDINARY_CLOUD_NAME=dzaojduwo
+CLOUDINARY_API_KEY=585341247328739
+CLOUDINARY_API_SECRET=XMovbwp46cSONa-1a7qgngDtGpQ
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=huynhhoanghuy.25@gmail.com
@@ -14,3 +14,18 @@ GOOGLE_MAPS_API=AIzaSyAvSBd_XwsePEPv5NuJBhne1LCAj-yUOYM
 # ExchangeRate-API (VND/USD)
 EXCHANGE_RATE_API_KEY=7462133b0416fc7c35a06f05
 EXCHANGE_RATE_API_URL=https://v6.exchangerate-api.com/v6/
+
+# VNPAY Configuration
+VNPAY_TMN_CODE=N119M3NE
+VNPAY_HASH_SECRET=AWDJVHR4J7DJANI56L2ZBT2Q8GV8WI4L
+VNPAY_PAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_RETURN_URL=http://localhost:3000/api/v1/user/payments/vnpay-return
+VNPAY_IPN_URL=http://localhost:3000/api/v1/payments/vnpay/ipn
+
+# MoMo Configuration
+MOMO_PARTNER_CODE=MOMO
+MOMO_ACCESS_KEY=F8BBA842ECF85
+MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
+MOMO_PAY_URL=https://test-payment.momo.vn/v2/gateway/api/create
+MOMO_RETURN_URL=http://localhost:3000/api/v1/payments/momo/return
+MOMO_IPN_URL=http://localhost:3000/api/v1/payments/momo/ipn
