--- a/api/.env
+++ b/api/.env
@@ -10,17 +10,17 @@ EMAIL_USER=huynhhoanghuy.25@gmail.com
 EMAIL_PASS=wupa atxz ywxc rjwe
 
 GOOGLE_MAPS_API=AIzaSyAvSBd_XwsePEPv5NuJBhne1LCAj-yUOYM
-
 # ExchangeRate-API (VND/USD)
 EXCHANGE_RATE_API_KEY=7462133b0416fc7c35a06f05
 EXCHANGE_RATE_API_URL=https://v6.exchangerate-api.com/v6/
 
 # VNPAY Configuration
-VNPAY_TMN_CODE=N119M3NE
-VNPAY_HASH_SECRET=AWDJVHR4J7DJANI56L2ZBT2Q8GV8WI4L
-VNPAY_PAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-VNPAY_RETURN_URL=http://localhost:3000/api/v1/user/payments/vnpay-return
-VNPAY_IPN_URL=http://localhost:3000/api/v1/payments/vnpay/ipn
+VNP_TMN_CODE=N119M3NE
+VNP_HASH_SECRET=AWDJVHR4J7DJANI56L2ZBT2Q8GV8WI4L
+VNP_PAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNP_RETURN_URL=http://localhost:3000/api/v1/user/payments/vnpay-return
+VNP_IPN_URL=http://localhost:3000/api/v1/payments/vnpay/ipn
+VNP_PAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 
 # MoMo Configuration
 MOMO_PARTNER_CODE=MOMO
@@ -29,3 +29,4 @@ MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
 MOMO_PAY_URL=https://test-payment.momo.vn/v2/gateway/api/create
 MOMO_RETURN_URL=http://localhost:3000/api/v1/payments/momo/return
 MOMO_IPN_URL=http://localhost:3000/api/v1/payments/momo/ipn
+MOMO_CREATE_API=https://test-payment.momo.vn/v2/gateway/api/create
