--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "cloudinary": "^1.41.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
@@ -23,7 +24,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "vnpay": "^2.4.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
