feat: AI generation cho banner bằng data movie và eventTheme

--- a/api/.env
+++ b/api/.env
@@ -29,3 +29,6 @@ MOMO_PAY_URL=https://test-payment.momo.vn/v2/gateway/api/create
 MOMO_RETURN_URL=http://localhost:3000/api/v1/payments/momo/return
 MOMO_IPN_URL=http://localhost:3000/api/v1/payments/momo/ipn
 MOMO_CREATE_API=https://test-payment.momo.vn/v2/gateway/api/create
+
+# Google AI Configuration
+GOOGLE_AI_API_KEY=AIzaSyB27xn01uyteBnRMc5vtyUC7NXlLSjZBos
