--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,10 @@
     "seed": "node ./scripts/seed.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
+    "canvas": "^3.2.0",
     "cloudinary": "^1.41.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -25,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.7",
+    "sharp": "^0.34.5",
     "vnpay": "^2.4.4"
   },
   "devDependencies": {
