--- a/reactnative/package.json
+++ b/reactnative/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.1",
     "expo": "~54.0.21",
     "expo-constants": "~18.0.10",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-status-bar": "~3.0.8",
     "jwt-decode": "^4.0.0",
