--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.7",
     "sharp": "^0.34.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "vnpay": "^2.4.4"
   },
   "devDependencies": {
